# servers

./: .gitignore  README.md
elisp/: httpd.el
fsharp/: httpd.sln
fsharp/httpd/: Program.fs
fsharp/httpd.tests/: UnitTest1.fs  test.fsproj
ocaml/: LICENSE  dune-project  httpd.ml  httpd.opam  misc.ml
ocaml/lib/: dune
